@@ -1170,45 +1170,48 @@ abstract class WC_Stripe_Payment_Gateway extends WC_Payment_Gateway_CC {
 	 *
 	 * @since 3.0.0
 	 * @version 4.0.0
+	 *
+	 * @return array
 	 */
 	public function add_payment_method() {
-		$error     = false;
-		$error_msg = __( 'There was a problem adding the payment method.', 'woocommerce-gateway-stripe' );
-		$source_id = '';
-
-		if ( empty( $_POST['stripe_source'] ) && empty( $_POST['stripe_token'] ) || ! is_user_logged_in() ) {
-			$error = true;
-		}
-
-		$stripe_customer = new WC_Stripe_Customer( get_current_user_id() );
-
-		$source = ! empty( $_POST['stripe_source'] ) ? wc_clean( wp_unslash( $_POST['stripe_source'] ) ) : '';
-
-		$source_object = WC_Stripe_API::get_payment_method( $source );
-
-		if ( isset( $source_object ) ) {
-			if ( ! empty( $source_object->error ) ) {
-				$error = true;
+		try {
+			if ( ! is_user_logged_in() ) {
+				throw new WC_Stripe_Exception( 'No logged-in user found.' );
 			}
 
-			$source_id = $source_object->id;
-		} elseif ( isset( $_POST['stripe_token'] ) ) {
-			$source_id = wc_clean( wp_unslash( $_POST['stripe_token'] ) );
+			// Retrieve the source object from the submitted $_POST data.
+			$source_object = $this->get_source_object_from_request();
+
+			if ( empty( $source_object ) || empty( $source_object->id ) ) {
+				throw new WC_Stripe_Exception( "The retrieved source doesn't contain an ID." );
+			}
+
+			// Non-reusable payment methods won't be attached.
+			if ( ! WC_Stripe_Helper::is_reusable_payment_method( $source_object ) ) {
+				throw new WC_Stripe_Exception(
+					"The provided payment method isn't reausable." .
+					// phpcs:ignore WordPress.PHP.DevelopmentFunctions.error_log_print_r
+					PHP_EOL . 'Source object: ' . print_r( $source_object, true )
+				);
+			}
+
+			// Now that we've got the source object, attach it to the user.
+			$this->save_payment_method( $source_object );
+
+		} catch ( WC_Stripe_Exception $e ) {
+			WC_Stripe_Logger::log(
+				sprintf(
+					'Add payment method Error: %s',
+					$e->getMessage()
+				)
+			);
+
+			return [ 'result' => 'failure' ];
 		}
 
-		$response = $stripe_customer->add_source( $source_id );
+		$payment_method_name = isset( $_POST['payment_method'] ) ? wc_clean( wp_unslash( $_POST['payment_method'] ) ) : '';
 
-		if ( ! $response || is_wp_error( $response ) || ! empty( $response->error ) ) {
-			$error = true;
-		}
-
-		if ( $error ) {
-			wc_add_notice( $error_msg, 'error' );
-			WC_Stripe_Logger::log( 'Add payment method Error: ' . $error_msg );
-			return;
-		}
-
-		do_action( 'wc_stripe_add_payment_method_' . ( isset( $_POST['payment_method'] ) ? wc_clean( wp_unslash( $_POST['payment_method'] ) ) : '' ) . '_success', $source_id, $source_object );
+		do_action( 'wc_stripe_add_payment_method_' . $payment_method_name . '_success', $source_object->id, $source_object );
 
 		return [
 			'result'   => 'success',
@@ -1932,6 +1935,30 @@ abstract class WC_Stripe_Payment_Gateway extends WC_Payment_Gateway_CC {
 	}
 
 	/**
+	 * Attaches the given payment method to the currently logged-in user.
+	 *
+	 * @param object $source_object The payment method to be attached.
+	 * @throws WC_Stripe_Exception
+	 */
+	public function save_payment_method( $source_object ) {
+		$user_id  = get_current_user_id();
+		$customer = new WC_Stripe_Customer( $user_id );
+
+		if ( $user_id && WC_Stripe_Helper::is_reusable_payment_method( $source_object ) ) {
+			$response = $customer->add_source( $source_object->id );
+
+			if ( ! empty( $response->error ) ) {
+				// Formatting the response for the debug log entry.
+				// phpcs:ignore WordPress.PHP.DevelopmentFunctions.error_log_print_r
+				throw new WC_Stripe_Exception( print_r( $response, true ), $this->get_localized_error_message_from_response( $response ) );
+			}
+			if ( is_wp_error( $response ) ) {
+				throw new WC_Stripe_Exception( $response->get_error_message(), $response->get_error_message() );
+			}
+		}
+	}
+
+	/**
 	 * Returns the JavaScript configuration object used on the product, cart, and checkout pages.
 	 *
 	 * @return array  The configuration object to be loaded to JS.
@@ -2007,6 +2034,48 @@ abstract class WC_Stripe_Payment_Gateway extends WC_Payment_Gateway_CC {
 		$stripe_params = array_merge( $stripe_params, WC_Stripe_Helper::get_localized_messages() );
 
 		return $stripe_params;
+	}
+
+	/**
+	 * Retrieves and returns the source_id for the given $_POST variables.
+	 *
+	 * @throws WC_Stripe_Exception Error while attempting to retrieve the source_id.
+	 * @return object
+	 */
+	private function get_source_object_from_request() {
+		if ( empty( $_POST['stripe_source'] ) && empty( $_POST['stripe_token'] ) ) {
+			throw new WC_Stripe_Exception( 'Missing stripe_source and stripe_token from the request.' );
+		}
+
+		$source = isset( $_POST['stripe_source'] ) ? wc_clean( wp_unslash( $_POST['stripe_source'] ) ) : '';
+
+		if ( ! empty( $source ) ) {
+			// This method throws a WC_Stripe_Exception when there's an error. It's intended to be caught by the calling method.
+			$source_object = $this->get_source_object( $source );
+
+			// We better make get_source_object() handle wp_errors to reduce redundancy here.
+			if ( is_wp_error( $source_object ) ) {
+				throw new WC_Stripe_Exception( $source_object->get_error_message() . ' Code: ' . $source_object->get_error_code() );
+			}
+
+			return $source_object;
+		}
+
+		$stripe_token_as_source_id = isset( $_POST['stripe_token'] ) ? wc_clean( wp_unslash( $_POST['stripe_token'] ) ) : '';
+
+		if ( ! empty( $stripe_token_as_source_id ) ) {
+			// This method throws a WC_Stripe_Exception when there's an error. It's intended to be caught by the calling method.
+			$source_object = $this->get_source_object( $stripe_token_as_source_id );
+
+			// We better make get_source_object() handle wp_errors to reduce redundancy here.
+			if ( is_wp_error( $source_object ) ) {
+				throw new WC_Stripe_Exception( $source_object->get_error_message() . ' Code: ' . $source_object->get_error_code() );
+			}
+
+			return $source_object;
+		}
+
+		throw new WC_Stripe_Exception( "The source object couldn't be retrieved." );
 	}
 
 	/**
